hoan thanh demo crud khach hang

--- a/src/main/resources/templates/showKhachhang.html
+++ b/src/main/resources/templates/showKhachhang.html
@@ -17,6 +17,7 @@
         }
         td {
             padding-right: 5px;
+            text-align: center;
         }
 
     </style>
@@ -37,6 +38,7 @@
            <th>Chứng minh thư</th>
            <th>Ngày sinh</th>
            <th>Địa chỉ</th>
+           <th colspan="2">Thao tác</th>
        </tr>
        <th:block th:each="khachhang:${khachhangs}">
         <tr>
@@ -45,6 +47,8 @@
             <td th:text="${khachhang.chungminhthu}"></td>
             <td th:text="${khachhang.ngaysinh}"></td>
             <td th:text="${khachhang.diachi}"></td>
+            <td ><a th:href="@{/khachhang/edit-khachhang/{id}(id=${khachhang.getMakhachhang()})}">Sửa</a></td>
+            <td ><a th:href="@{/khachhang/xoa-khachhang/{id}(id=${khachhang.getMakhachhang()})}">Xóa</a></td>
         </tr>
 
        </th:block>
