--- a/src/main/resources/templates/error404.html
+++ b/src/main/resources/templates/error404.html
@@ -3,9 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <link rel="stylesheet" href="/css/bootstrap.css">
     <link rel="stylesheet" href="./css/bootstrap.css">
-    <script src="./js/jquery-3.2.1.js"></script>
-    <script src="./js/bootstrap.js"></script>
     <style>
         #header,#footer {
             background-color: aquamarine;
@@ -18,16 +17,44 @@
         }
 
     </style>
+    <script>
+       // function showTime(){
+       //     var today = new Date();
+       //     var date = today.getDate()+'/'+today.getMonth()+'/'+today.getFullYear();
+       //     var time = today.getHours() + ":" + today.getMinutes() ;
+       //     var dateTime = date+' '+time;
+       //     return dateTime;
+       // }
+
+
+    </script>
 </head>
 <body>
 <!-- begin header-->
 <div id="header">
     <h3>Chào mừng đến với ngân hàng KITS</h3>
-    <h5>Thời gian hiện tại là 10h</h5>
+    <h5>Thời gian hiện tại là <span id="time"></span></h5>
+    <script>
+        // document.getElementById('time').innerHTML=showTime()
+        function currentTime() {
+            var date = new Date(); /* creating object of Date class */
+            var hour = date.getHours();
+            var min = date.getMinutes();
+            var sec = date.getSeconds();
+
+            document.getElementById("time").innerText = hour + " : " + min + " : " + sec; /* adding time to the div */
+             setTimeout(function(){ currentTime() }, 1000); /* setting timer */
+        }
+
+
+        currentTime(); /* calling currentTime() function to initiate the process */
+
+    </script>
 </div>
 <!--end header-->
 <!--begin body-->
 <div id="body" >
+    <h6>404 marking</h6>
 
    <h3 class="alert alert-danger">Đã xảy ra lỗi, vui lòng thử lại hoặc <a href="#">Liên hệ với chúng tôi</a></h3>
     <button class="alert alert-warning" onclick="window.history.back()">Quay trở lại trang trước</button>
