--- a/src/main/resources/templates/showKhachhang.html
+++ b/src/main/resources/templates/showKhachhang.html
@@ -7,11 +7,10 @@
     <link rel="stylesheet" href="/css/bootstrap.css">
     <link rel="stylesheet" href="./css/bootstrap.css">
 
-
-<!--    <link rel="stylesheet" th:href="@{/css/bootstrap.css}">-->
-    <script src="../js/jquery-3.2.1.js"></script>
-    <script src="../js/bootstrap.js"></script>
     <style>
+        a:hover {
+            text-decoration: none;
+        }
         #header,#footer {
             background-color: aquamarine;
         }
@@ -24,11 +23,23 @@
             padding-right: 5px;
             text-align: center;
         }
+        th {
+            text-align: center;
+            color: #6f42c1;
+        }
         /*#body,#header,#footer {*/
         /*    margin: auto;*/
         /*    width: 80%;*/
         /*}*/
-
+    .taomoi {
+        width: 350px;
+        height: 40px;
+        background-color: antiquewhite;
+        border-radius: 6px;
+    }
+    #search {
+        background-color: antiquewhite;
+    }
     </style>
 </head>
 <body>
@@ -43,7 +54,7 @@
 <!--    <form action="/khachhang/search-khachhang" method="post">-->
     <form action="/khachhang/search-khachhang" method="post">
         <input name="searchKhachhang" style="width: 350px" type="text" placeholder="Tìm kiếm khách hàng theo tên hoặc Id">
-        <button type="submit">Tìm kiếm</button>
+        <button id="search" type="submit">Tìm kiếm</button>
     </form>
    <table>
        <tr>
@@ -71,7 +82,7 @@
 
    </table>
     <a href=""></a>
-    <a href="/khachhang/create-khachhang">Đăng kí khách hàng mới</a>
+    <button class="taomoi"><a href="/khachhang/create-khachhang">Đăng kí khách hàng mới</a></button>
 
 </div>
 <!--end body-->
